# ROS-Arkairo

./: $PARAMS_FILE  .gitignore  DEPLOYMENT.md  HARDWARE_TESTING.md  README.md  SITL_TESTING_GUIDE.md  TELEMETRY_HARDWARE_TEST.md  autostart_drone1.sh  launch_both_drones_test.sh  launch_drone1_hardware.sh  launch_drone1_on_hardware.sh  launch_drone1_test.sh  launch_drone2_test.sh  mav.parm  mav.tlog.raw  send_test_geotag.sh  start_sitl_kerala.sh  test_telemetry_pair.py  test_telemetry_unit.py  way.txt
config/: cube_orange_params.param
drone1_ws/: RASPBERRY_PI_SETUP.md
drone1_ws/config/: mavros_hardware.yaml
drone1_ws/developers_debug/: 01_DRONE1_NAVIGATION_NODE.md  02_KML_LANE_PLANNER_NODE.md  03_IMAGE_CAPTURE_NODE.md  04_DETECTION_AND_GEOTAG_NODE.md  05_TELEM_TX_NODE.md  README.md
drone1_ws/missions/: SOE.kml  SOE_waypoints_20251230_014740.waypoints  SOE_waypoints_20260106_171038.waypoints  SOE_waypoints_20260106_180605.waypoints  SOE_waypoints_20260106_235820.waypoints  SOE_waypoints_20260111_214929.waypoints  SOE_waypoints_20260111_224348.waypoints  SOE_waypoints_20260112_010859.waypoints  SOE_waypoints_20260112_013239.waypoints  SOE_waypoints_20260317_125031.waypoints  SOE_waypoints_20260317_125747.waypoints
drone1_ws/src/d1_to_gcs_uplink/: README.md  package.xml  setup.cfg  setup.py
drone1_ws/src/d1_to_gcs_uplink/config/: uplink_params.yaml
drone1_ws/src/d1_to_gcs_uplink/d1_to_gcs_uplink/: d1_to_gcs_uplink_node.py
drone1_ws/src/detection_and_geotag/: README.md  package.xml  setup.cfg  setup.py
drone1_ws/src/detection_and_geotag/config/: detection_params.yaml  test_params.yaml
drone1_ws/src/detection_and_geotag/detection_and_geotag/: detection_and_geotag_node.py  detection_test_node.py
drone1_ws/src/detection_and_geotag/launch/: detection_test.launch.py
drone1_ws/src/drone1_bringup/: package.xml  setup.cfg  setup.py
drone1_ws/src/drone1_bringup/config/: drone1_params.yaml
drone1_ws/src/drone1_bringup/launch/: drone1_survey.launch.py
drone1_ws/src/drone1_msgs/: CMakeLists.txt  README.md  package.xml
drone1_ws/src/drone1_msgs/msg/: LaneSegment.msg  LaneSegmentArray.msg  Waypoint.msg
drone1_ws/src/drone1_navigation/: IMPLEMENTATION_SUMMARY.md  LANE_NAVIGATION_UPDATE.md  NAVIGATION_GUIDE.md  QUICK_REFERENCE.txt  README.md  SIMPLIFIED_NAVIGATION.md  package.xml  setup.cfg  setup.py
drone1_ws/src/drone1_navigation/config/: hardware_params.yaml  navigation_params.yaml
drone1_ws/src/drone1_navigation/drone1_navigation/: drone1_navigation_node.py
drone1_ws/src/image_capture/: README.md  package.xml  setup.py
drone1_ws/src/image_capture/config/: camera_params.yaml
drone1_ws/src/image_capture/image_capture/: image_capture_node.py  publish_test_image.py
drone1_ws/src/kml_lane_planner/: README.md  package.xml  setup.cfg  setup.py
drone1_ws/src/kml_lane_planner/config/: planner_params.yaml
drone1_ws/src/kml_lane_planner/kml_lane_planner/: kml_lane_planner_node.py
drone1_ws/src/telem_tx/: README.md  package.xml  setup.cfg  setup.py
drone1_ws/src/telem_tx/resource/: telem_tx
drone1_ws/src/telem_tx/telem_tx/: __init__.py  telem_tx_node.py
drone2_ws/: mav.parm  mav.tlog.raw
drone2_ws/developers_debug/: 01_TELEM_RX_NODE.md  02_DRONE2_NAVIGATION_NODE.md  03_DETECTION_CENTERING_NODE.md  04_SPRAYER_CONTROL_NODE.md  README.md
drone2_ws/src/centering_controller/: README.md  package.xml  setup.cfg  setup.py
drone2_ws/src/centering_controller/centering_controller/: centering_controller_node.py
drone2_ws/src/centering_controller/config/: centering_params.yaml
drone2_ws/src/drone2_bringup/: package.xml  setup.cfg  setup.py
drone2_ws/src/drone2_bringup/config/: drone2_params.yaml
drone2_ws/src/drone2_bringup/launch/: drone2_sprayer.launch.py
drone2_ws/src/drone2_msgs/: CMakeLists.txt  package.xml
drone2_ws/src/drone2_msgs/msg/: MissionState.msg  SprayerStatus.msg
drone2_ws/src/drone2_navigation/: README.md  package.xml  setup.cfg  setup.py
drone2_ws/src/drone2_navigation/config/: navigation_params.yaml
drone2_ws/src/drone2_navigation/drone2_navigation/: drone2_navigation_node.py
drone2_ws/src/gcs_to_d2_downlink/: README.md  package.xml  setup.cfg  setup.py
drone2_ws/src/gcs_to_d2_downlink/config/: downlink_params.yaml
drone2_ws/src/local_detection/: README.md  package.xml  setup.cfg  setup.py
drone2_ws/src/local_detection/config/: detection_params.yaml
drone2_ws/src/local_detection/local_detection/: local_detection_node.py
drone2_ws/src/local_detection_and_centering/: README.md  package.xml  setup.cfg  setup.py
drone2_ws/src/local_detection_and_centering/config/: detection_centering_params.yaml
drone2_ws/src/local_detection_and_centering/local_detection_and_centering/: detection_centering_node.py
drone2_ws/src/mission_manager/: README.md  package.xml  setup.py
drone2_ws/src/mission_manager/config/: manager_params.yaml
drone2_ws/src/sprayer_control/: README.md  package.xml  setup.cfg  setup.py
drone2_ws/src/sprayer_control/config/: sprayer_params.yaml
drone2_ws/src/sprayer_control/sprayer_control/: __init__.py  pump_test.py  sprayer_control_node.py
drone2_ws/src/telem_rx/: README.md  package.xml  setup.cfg  setup.py
drone2_ws/src/telem_rx/config/: telem_rx_params.yaml
drone2_ws/src/telem_rx/resource/: telem_rx
drone2_ws/src/telem_rx/telem_rx/: telem_rx_node.py
gcs_ws/developers_debug/: 01_GCS_FORWARDER_NODE.md
gcs_ws/src/gcs_bringup/: package.xml  setup.py
gcs_ws/src/gcs_bringup/config/: gcs_params.yaml
gcs_ws/src/gcs_bringup/launch/: gcs.launch.py
gcs_ws/src/gcs_forwarder/: package.xml  setup.cfg  setup.py
gcs_ws/src/gcs_forwarder/config/: forwarder_params.yaml
gcs_ws/src/gcs_forwarder/gcs_forwarder/: __init__.py  forwarder_node.py
gcs_ws/src/gcs_mission_router/: README.md  package.xml  setup.cfg  setup.py
gcs_ws/src/gcs_mission_router/config/: router_params.yaml
gcs_ws/src/gcs_mission_router/gcs_mission_router/: gcs_mission_router_node.py
gcs_ws/src/gcs_msgs/: CMakeLists.txt  package.xml
gcs_ws/src/gcs_target_receiver/: README.md  package.xml  setup.cfg  setup.py
(+6 files in other folders)
