<?xml version="1.0"?>
<package format="3">
  <name>centering_controller</name>
  <version>1.0.0</version>
  <description>Fine position alignment for spray targeting</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
