<?xml version="1.0"?>
<package format="3">
  <name>local_detection</name>
  <version>1.0.0</version>
  <description>Local disease confirmation for Drone-2</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <export><build_type>ament_python</build_type></export>
</package>
