<?xml version="1.0"?>
<package format="3">
  <name>sprayer_control</name>
  <version>1.0.0</version>
  <description>Spray actuation with safety checks</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
