<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gcs_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for Ground Control Station</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gcs_msgs</exec_depend>
  <exec_depend>gcs_target_receiver</exec_depend>
  <exec_depend>gcs_mission_router</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
