<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gcs_forwarder</name>
  <version>1.0.0</version>
  <description>GCS geotag forwarder - relays disease geotags from Drone 1 to Drone 2</description>
  <maintainer email="shaan@example.com">Shaan Shoukath</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-pymavlink</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
